k8s/manifests/apps/fraud-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fraud-app
  labels:
    app: fraud-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fraud-app
  template:
    metadata:
      name: fraud-app
      labels:
        app: fraud-app
    spec:
      containers:
        - name: fraud-app
          image: daneker/spring-k8s-fraud-service
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 45
            periodSeconds: 5
            failureThreshold: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 45
            periodSeconds: 5
            failureThreshold: 10
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: fraud-app
spec:
  selector:
    app: fraud-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
