k8s/manifests/apps/api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-app
  labels:
    app: api-gateway-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway-app
  template:
    metadata:
      name: api-gateway-app
      labels:
        app: api-gateway-app
    spec:
      containers:
        - name: api-gateway-app
          image: daneker/spring-k8s-api-gateway
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 45
            periodSeconds: 5
            failureThreshold: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 45
            periodSeconds: 5
            failureThreshold: 10
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-app
spec:
  selector:
    app: api-gateway-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: api-gateway-ingress
spec:
  rules:
    - host: api-gateway.danekerscode.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway-app
                port:
                  number: 8080
